# CommonAPI-Projects

./: .gitignore  README.md  envsetup.sh
HelloEverything/: CMakeLists.txt  commonapi4someip.ini
HelloEverything/fidl/: helloEverything.fdepl  helloEverything.fidl
HelloEverything/src/: HelloEverythingClient.cpp  HelloEverythingService.cpp  HelloEverythingStubImpl.cpp  HelloEverythingStubImpl.hpp
HelloEverything/src-gen/core/common/v1/rgb/examples/: HelloEverything.hpp  HelloEverythingInstanceIds.hpp  MyTypes.hpp
HelloEverything/src-gen/core/proxy/v1/rgb/examples/: HelloEverythingProxy.hpp  HelloEverythingProxyBase.hpp
HelloEverything/src-gen/core/skel/v1/rgb/examples/: HelloEverythingStubDefault.hpp
HelloEverything/src-gen/core/stub/v1/rgb/examples/: HelloEverythingStub.hpp
HelloEverything/src-gen/someip/common/v1/rgb/examples/: HelloEverythingSomeIPDeployment.cpp  HelloEverythingSomeIPDeployment.hpp  MyTypesSomeIPDeployment.cpp  MyTypesSomeIPDeployment.hpp
HelloEverything/src-gen/someip/proxy/v1/rgb/examples/: HelloEverythingSomeIPProxy.cpp  HelloEverythingSomeIPProxy.hpp
HelloEverything/src-gen/someip/stub/v1/rgb/examples/: HelloEverythingSomeIPCatalog.json  HelloEverythingSomeIPStubAdapter.cpp  HelloEverythingSomeIPStubAdapter.hpp
HelloWorld/: CMakeLists.txt  commonapi4someip.ini  helloworld-local.json
HelloWorld/fidl/: HelloWorld.fdepl  HelloWorld.fidl
HelloWorld/src/: HelloWorldClient.cpp  HelloWorldService.cpp  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp
HelloWorld/src-gen/core/common/v0/commonapi/examples/: HelloWorld.hpp  HelloWorldInstanceIds.hpp
HelloWorld/src-gen/core/proxy/v0/commonapi/examples/: HelloWorldProxy.hpp  HelloWorldProxyBase.hpp
HelloWorld/src-gen/core/skel/v0/commonapi/examples/: HelloWorldStubDefault.hpp
HelloWorld/src-gen/core/stub/v0/commonapi/examples/: HelloWorldStub.hpp
HelloWorld/src-gen/someip/common/v0/commonapi/examples/: HelloWorldSomeIPDeployment.cpp  HelloWorldSomeIPDeployment.hpp
HelloWorld/src-gen/someip/proxy/v0/commonapi/examples/: HelloWorldSomeIPProxy.cpp  HelloWorldSomeIPProxy.hpp
HelloWorld/src-gen/someip/stub/v0/commonapi/examples/: HelloWorldSomeIPStubAdapter.cpp  HelloWorldSomeIPStubAdapter.hpp
